--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ BIBLE_API_KEY=your_api_bible_key_here
 # NIV: de4e12af7f28f599-02
 # ESV: 06125adad2d5898a-01
 BIBLE_DEFAULT_ID=de4e12af7f28f599-02
+
+# Auth & CORS
+# If true, API routes under /api require a logged-in session (except /auth, /share, /bibles, /health/healthz)
+REQUIRE_AUTH=false
+# Comma-separated list of allowed origins in production (e.g. https://app.yourdomain.com,https://www.yourdomain.com)
+# In development, if unset, the server reflects the request origin for convenience.
+CORS_ORIGIN=
